OnboardingV2Minimal/force-app/main/default/objects/Follow_Up_Suppression__mdt/Follow_Up_Suppression__mdt.object-meta.xml
<CustomObject>
    <label>Follow Up Suppression</label>
    <pluralLabel>Follow Up Suppressions</pluralLabel>
</CustomObject>