OnboardingV2Minimal/force-app/main/default/objects/Follow_Up_Suppression__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marks suppression as active.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>