OnboardingV2Minimal/force-app/main/default/objects/Follow_Up_Suppression__mdt/fields/Fatigue_Rule_Reference__c.field-meta.xml
<CustomField>
    <fullName>Fatigue_Rule_Reference__c</fullName>
    <description>Reference to fatigue rule (DeveloperName or Id) if suppression is fatigue-based.</description>
    <label>Fatigue Rule Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>