OnboardingV2Minimal/force-app/main/default/objects/Follow_Up_Suppression__mdt/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <description>Reason for suppression (e.g., holiday, fatigue, manual).</description>
    <label>Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>