OnboardingV2Minimal/force-app/main/default/objects/Follow_Up_Suppression__mdt/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Start date for suppression window.</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>