OnboardingV2Minimal/force-app/main/default/objects/Follow_Up_Suppression__mdt/fields/Suppression_Type__c.field-meta.xml
<CustomField>
    <fullName>Suppression_Type__c</fullName>
    <description>Type of suppression (Holiday, Fatigue, Manual, System).</description>
    <label>Suppression Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Holiday</fullName>
                <default>true</default>
                <label>Holiday</label>
            </value>
            <value>
                <fullName>Fatigue</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
            <value>
                <fullName>System</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>